# ExoPlanet-Detection

./: .gitignore  README.md  app.py  model_utils.py  pyproject.toml  requirements.txt
Models/: best_model.joblib
notebook/: dataset_builder.ipynb  main.ipynb
scripts/: train_best_model.py
