[project]
name = "exoplanet-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "absl-py==2.4.0",
    "aiobotocore==3.2.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aioitertools==0.13.0",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "astropy==7.2.0",
    "astropy-iers-data==0.2026.3.2.0.47.4",
    "astroquery==0.4.11",
    "asttokens==3.0.1",
    "astunparse==1.6.3",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "bokeh==3.8.2",
    "botocore==1.42.55",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fbpca==1.0",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "gast==0.7.0",
    "google-pasta==0.2.0",
    "greenlet==3.3.2",
    "grpcio==1.78.0",
    "h5py==3.15.1",
    "html5lib==1.1",
    "idna==3.11",
    "imbalanced-learn==0.14.1",
    "imblearn==0.0",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.0",
    "jaraco-functools==4.4.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "joblib==1.5.3",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kagglehub==1.0.0",
    "kagglesdk==0.1.16",
    "keras==3.13.2",
    "keyring==25.7.0",
    "kiwisolver==1.4.9",
    "libclang==18.1.1",
    "lightkurve==2.5.1",
    "mako==1.3.10",
    "markdown==3.10.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "memoization==0.4.0",
    "ml-dtypes==0.5.4",
    "more-itertools==10.8.0",
    "multidict==6.7.1",
    "namex==0.1.0",
    "narwhals==2.17.0",
    "nest-asyncio==1.6.0",
    "numpy==2.4.2",
    "opt-einsum==3.4.0",
    "optree==0.19.0",
    "optuna==4.8.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.6",
    "patsy==1.0.2",
    "pillow==10.4.0",
    "pip==26.0.1",
    "platformdirs==4.9.2",
    "plotly==5.24.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==5.28.3",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pyerfa==2.0.1.5",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyvo==1.8.1",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "rich==13.9.4",
    "s3fs==2026.2.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "setuptools==82.0.0",
    "six==1.17.0",
    "sklearn-compat==0.1.5",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.48",
    "stack-data==0.6.3",
    "streamlit==1.39.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.3.0",
    "threadpoolctl==3.6.0",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "uncertainties==3.2.3",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
    "webencodings==0.5.1",
    "werkzeug==3.1.6",
    "wheel==0.46.3",
    "wrapt==2.1.1",
    "xgboost==3.2.0",
    "xyzservices==2025.11.0",
    "yarl==1.23.0",
]
